fix button collapse color

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -192,3 +192,6 @@ nav .brand-logo {
 .pagination li.active{
 	background-color: #444 !important;
 }
+.button-collapse {
+	color: #444 !important;
+}
